# Autonomous-drone-navigation-using-reinforcement-learning

./: CITATION.cff  LICENSE  README.md  build_project.sh  frames_to_video.py  manual_hover.py  ppo.py  pyproject.toml  test.py  test_crazyfly.py  test_hover.py  test_sverk.py  test_takeoff_landing.py  train_crazyfly.py  train_hover.py  train_sac.py  train_sverk.py  train_takeoff_landing.py  train_td3.py
gym_pybullet_drones/assets/: sverk_v1.urdf  sverk_v2.urdf
gym_pybullet_drones/control/: BaseControl.py  DSLPIDControl.py
gym_pybullet_drones/envs/: BaseAviary.py  BaseRLAviary.py  FlyThruGateAviary.py  LandingAviary.py  TakeoffHoverAviary.py  TakeoffLandingAviary.py  __init__.py
gym_pybullet_drones/utils/: enums.py
log_dir/CrazyFly_RPM/: 36388_ppo_drone.pth  PPO_log.csv  plot_log.py
log_dir/hover_thrust/: best_model_100000.pth  best_model_160000.pth  best_model_20000.pth  best_model_50000.pth  training_log.csv
log_dir/landing/: best_model_150000.pth  best_model_50000.pth  training_log.csv
log_dir/sverkTHRUST/: best_model_1290000.pth  training_log.csv
log_dir/sverkVEL/: training_log.csv
log_dir/sverk_RPM_0/: best_model_390000.pth  training_log.csv
log_dir/sverk_RPM_1/: best_model_920000.pth  plot_log.py  training_log.csv
log_dir/sverk_V2_THRUST/: best_model_190000.pth  plot_log.py  training_log.csv
log_dir/takeoff_landing/: best_model_100000.pth  best_model_150000.pth  best_model_250000.pth  best_model_50000.pth  training_log.csv
log_dir/takeoff_landing_1/: best_model_200000.pth  best_model_50000.pth  best_model_550000.pth  training_log.csv
(+22 files in other folders)
