[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "gym_pybullet_drones"
version = "1.0.0"
description = "Modified gym-pybullet-drones environment for drone racing with thrust control and Sverk drone model"
authors = ["Pavel Didin <didin.pa@phystech.edu>"]
license = "MIT"
readme = "README.md"
packages = [{include = "gym_pybullet_drones"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19"
pybullet = "^3.2"
gymnasium = "^0.28"
scipy = "^1.7"
transforms3d = "^0.4"
Pillow = "^9.0"
opencv-python = "^4.5"
